# projet-chps21

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  convo.cpp  main.cpp  mpi_main.cpp  xor.cpp
apps/benchmark/: gemm_benchmark.cpp  gemm_benchmark.plot
cmake/: check_coverage.cmake
dependency/: cmake_coverage.cmake  stb_image.h  stb_image_write.h
docs/: CMakeLists.txt  Doxyfile.in
include/: ActivationFonction.hpp  ActivationFunction.hpp  BackpropStorage.hpp  Control.hpp  Image.hpp  MPINeuralNetwork.hpp  Matrix.hpp  Model.hpp  Network.hpp  NeuralNetwork.hpp  NeuralNetworkSerializer.hpp  Optimizer.hpp  ProjectConstant.hpp.in  RunControl.h  TrainingMethod.hpp  Transform.hpp  Utils.hpp  clMatrix.hpp  stb_image.h  tscl.hpp
include/clUtils/: clFMatrix.hpp  clFTensor.hpp  clKernelMap.hpp  clMatrix.hpp  clPlatformSelector.hpp  clQueueHandler.hpp  clWrapper.hpp
include/controlSystem/: Controller.hpp  ControllerResult.hpp  EvalController.hpp  ImageCache.h  ImageCache.hpp  InputSet.hpp  InputSetLoader.hpp  ModelEvaluator.hpp  RunConfiguration.hpp  RunControl.h  RunControl.hpp  TrainingCollection.hpp  TrainingCollectionLoader.hpp  TrainingController.hpp  TrainingImageCache.h  controller.hpp  controllerParameters.hpp  imageInputSet.hpp  inputSet.hpp  (+3 more)
interface/: CMakeLists.txt  NetworkInterface.cpp  NetworkInterface.hpp  command.py  duel.py  interface.cpp  interface.h  kreps.cpp  main.py  nolhmannjson.cmake  parameters.json  pybind11.cmake  setup.py  test.py
interface/GUI/: GUI.py  GUI.ui  dynamic_chart.py  requirements.txt
interface/cpp_lib_interface/: CMakeLists.txt  NetworkInterface.cpp  NetworkInterface.hpp  kreps.cpp
src/: ActivationFonction.cpp  ActivationFunction.cpp  CMakeLists.txt  Image.cpp  NeuralNetwork.cpp  NeuralNetworkSerializer.cpp  RunControl.cpp  Transform.cpp  TransformEngine.cpp  Utils.cpp  main.cpp
src/NeuralNetwork/: CMakeLists.txt  MLPSerializer.cpp  NeuralNetworkSerializer.cpp
src/clUtils/: CMakeLists.txt  clFMatrix.cpp  clFTensor.cpp  clKernelMap.cpp  clMatrix.cpp  clPlatformSelector.cpp  clQueueHandler.cpp  clWrapper.cpp
src/controlSystem/: CMakeLists.txt  Controller.cpp  ControllerResult.cpp  EvalController.cpp  ImageCache.cpp  InputSet.cpp  InputSetLoader.cpp  ModelEvaluator.cpp  RunConfiguration.cpp  RunControl.cpp  TrainingCollection.cpp  TrainingCollectionLoader.cpp  TrainingController.cpp  TrainingImageCache.cpp  controller.cpp  controllerParameters.cpp  imageInputSet.cpp  inputSet.cpp  inputSetLoader.cpp  setLoader.cpp  trainingCollection.cpp
src/controlSystem/classifier/: CITCLoader.cpp  CMakeLists.txt  CTCollection.cpp  CTController.cpp  CTrainingSet.cpp  ClassLabel.cpp  classifierClass.cpp  classifierCollection.cpp  classifierController.cpp  classifierInputSet.cpp  classifierTracker.cpp
src/controlSystem2/: CMakeLists.txt  Controller.cpp  EvalController.cpp  InputSet.cpp  InputSetLoader.cpp  MPITrainingController.cpp  ModelEvaluator.cpp  ModelEvaluator.hpp  TrainingCollection.cpp  TrainingCollectionLoader.cpp  TrainingController.cpp
src/controlSystem_old/: CMakeLists.txt  StatTracker.cpp
src/image/: CMakeLists.txt  Image.cpp  Transform.cpp  TransformEngine.cpp
src/kernels/: ActivationFunction.cl  CMakeLists.txt  NormalizeCharToFloat.cl  optimization.cl
src/math/: CMakeLists.txt  clFMatrix.cpp  clFTensor.cpp
src/mpiWrapper/: CMakeLists.txt  MPITrainingController.cpp  TrainingCollectionScatterer.cpp  TrainingCollectionScatterer.hpp
src/neuralNetwork/: ActivationFunction.cpp  BatchScheduler.cpp  CMakeLists.txt  OptimizationScheduler.cpp  OptimizerBatchOperation.cpp  OptimizerBatchScheduler.cpp  OptimizerFactory.cpp  OptimizerScheduler.cpp  ParallelScheduler.cpp  SchedulerDecorator.cpp  SequentialScheduler.cpp
src/neuralNetwork/CNN/: CMakeLists.txt  CNN.cpp  CNNDependencyTree.cpp  CNNLayer.cpp  CNNModel.cpp  CNNNode.cpp  CNNOptimizer.cpp  CNNStorageBP.cpp  CNNTopology.cpp  CNNTopologyLayer.cpp  ConvolutionLayer.cpp  Filter.cpp  PoolingLayer.cpp
src/neuralNetwork/CNN/CNNOptimization/: CNNSGDOptimization.cpp
src/neuralNetwork/Model/: CMakeLists.txt  CNNModel.cpp  CNNModelOptimizer.cpp  MLPModel.cpp  MLPModelOptimizer.cpp  MLPOptimizer.cpp  ModelOptimizer.cpp  PlainTextMLPModelSerializer.cpp  Utf8MLPModelSerializer.cpp
src/neuralNetwork/OptimizationScheduler/: BatchLocation.cpp  BatchOptimizationScheduler.cpp  BatchProgression.cpp  CMakeLists.txt  MPIParallelScheduler.cpp  ParallelScheduler.cpp  SchedulerProfiler.cpp
src/neuralNetwork/Perceptron/: ActivationFunction.cpp  CMakeLists.txt  MLPBatchOptimizer.cpp  MLPMiniBatchOptimizer.cpp  MLPModel.cpp  MLPModelSerializer.cpp  MLPOptimizer.cpp  MLPSerializer.cpp  MLPStochOptimizer.cpp  MLPerceptron.cpp  MPIMLPModel.cpp  MPIMLPOptimizer.cpp  OptimizationMethod.cpp  PlainTextMLPSerializer.cpp  Utf8MLPSerializer.cpp
src/neuralNetwork/Perceptron/Optimization/: DecayMomentumOptimization.cpp  DecayOptimization.cpp  MomentumOptimization.cpp  Optimization.cpp  RProPOptimization.cpp  SGDOptimization.cpp
src/old_controlSystem/: CMakeLists.txt  controller.cpp  trainingCollection.cpp
src/old_controlSystem/classifier/: CITCLoader.cpp  CStatTracker.cpp  CTController.cpp  CTrainingSet.cpp
src/openclUtils/: CMakeLists.txt  clPlatformSelector.cpp  clWrapper.cpp
src/tscl/: CMakeLists.txt  logger.cpp  time.cpp  version.cpp
test/: ActivationFunction_test.cpp  CMakeLists.txt  Image_test.cpp  Math_test.cpp  NeuralNetwork_test.cpp  Transform_test.cpp  clFMatrix_test.cpp  main_test.cpp  opencl_test.cpp
test/controlSystem/: CMakeLists.txt  ClassifierCollection_test.cpp  ControllerParametersTest.cpp  InputSetLoader_test.cpp  InputSet_test.cpp  classifierClassTest.cpp  classifierInputSetTest.cpp
test/image/: CMakeLists.txt  Image_test.cpp  Transform_test.cpp
test/interface/: CMakeLists.txt  Interface_cpp_test.cpp
test/math/: CMakeLists.txt  Math_test.cpp  clFMatrix_test.cpp  clFTensor_test.cpp
test/neuralNetwork/: ActivationFunction_test.cpp  CMakeLists.txt  CNN_test.cpp  NeuralNetwork_test.cpp
(+116 files in other folders)
